Begin addressing some of the low-contrast type issues

--- a/docs/css/master.css
+++ b/docs/css/master.css
@@ -14,12 +14,12 @@ body { margin: 2em auto; width: 33em; font-size: 1.05em; line-height: 1.45; back
 p, dt, td { color: #000; }
 
 div.head { position: relative; }
-div.head:before { content: 'W3C'; background-color: #9cc; color: #fff; border-radius: 3px; -webkit-border-radius: 3px; position: absolute; top: 2em; left: -5em; font-weight: bold; font-size: 11px; padding: 3px 6px 2px; font-family: helvetica, sans-serif; text-align: right; letter-spacing: 0.1em; }
+div.head:before { content: 'W3C'; background-color: #7bb; color: #fff; border-radius: 3px; -webkit-border-radius: 3px; position: absolute; top: 2em; left: -5em; font-weight: bold; font-size: 11px; padding: 3px 6px 2px; font-family: helvetica, sans-serif; text-align: right; letter-spacing: 0.1em; }
 div.head hr, div.head > a, img[src*="http://www.w3.org/Icons/"], div.head dl { display: none; } /* Hide hr, the logo, logo alternate and the dl list in the head section */
 div.head h1 { font-family: "ChunkFiveRegular", impact; line-height: 1.4em; font-size: 2.9em; width: 530px; margin-bottom: 0.5em; text-shadow: 1px 1px 1px white; }
 div.head h2 { margin: 0 0 0.5em 0; }
 div.head h2.maturity { color: #666; font-size: 1em; border: 0px; }
-div.head p.copyright { color: #999; font-size: 0.8em; font-style: italic; width: 80%; line-height: 1.4em; }
+div.head p.copyright { color: #888; font-size: 0.8em; font-style: italic; width: 80%; line-height: 1.4em; }
 div.head p.copyright a { color: inherit; }
 
 h2, h2.maturity, h2.principal { display: inline-block; font-size: 1.6em; margin: 2em 0 0.5em 0; border-bottom: 2px solid #ccc; padding: 0em 0em 0.1em; }
@@ -33,7 +33,7 @@ p { margin-bottom: 1em; }
 div.example { margin-bottom: 1em; }
 ul { margin: 0em 0em 1em; }
 ul li { list-style: none; position: relative; margin: 0em 0em 0.25em; }
-ul li:before { content: '\22c5'; font-size: 2em; color: #9cc; position: absolute; top: -0.35em; left: -0.65em; font-family: lucida; font-weight: bold; }
+ul li:before { content: '\22c5'; font-size: 2em; color: #7bb; position: absolute; top: -0.35em; left: -0.65em; font-family: lucida; font-weight: bold; }
 ul li ul { margin: 0em; }
 li li { margin: 0em 0em 0em 1.2em; }
 code, pre { font-family: "Bitstream Vera Sans Mono", "DejaVu Sans Mono", "Andale Mono", Inconsolata, "Lucida Console", Consolas, Monaco, "courier new", courier; color: #066; font-size: 0.9em; }
@@ -51,8 +51,7 @@ table tr, table tbody { border: 0px; }
 hr { border: 0px; height: 2px; background: #acc; margin: 2em 0em; }
 strong { text-shadow: 1px 1px 1px #fff; }
 
-ol li { color: #9cc; }
-
+.toc li { color: #7bb; }
 
 ul.toc { list-style: none; }
 ul.toc li:before { content: ''; }
@@ -60,8 +59,8 @@ div.subtoc { background: transparent; border: 0em; }
 body .toc, body .subtoc { background: transparent; border: 0em; }
 
 h2, h3, h4, h5, h6 { position: relative; }
-div.section span.tocnum, .secno  { background-color: #9cc; color: #fff; border-radius: 3px; -webkit-border-radius: 3px; position: absolute; top: 0.7em; left: -6em; font-weight: bold; font-size: 11px; padding: 3px 6px; font-family: helvetica, sans-serif; text-align: right; letter-spacing: 0.1em; }
-a .secno { background-color: transparent; color: #9cc; border-radius: 0px; -webkit-border-radius: 0px; position: static; font-weight: normal; font-size: 1em; padding: 0px; font-family: inherit; text-align: left; letter-spacing: 0em; }
+div.section span.tocnum, .secno  { background-color: #7bb; color: #fff; border-radius: 3px; -webkit-border-radius: 3px; position: absolute; top: 0.7em; left: -6em; font-weight: bold; font-size: 11px; padding: 3px 6px; font-family: helvetica, sans-serif; text-align: right; letter-spacing: 0.1em; }
+a .secno { background-color: transparent; color: #7bb; border-radius: 0px; -webkit-border-radius: 0px; position: static; font-weight: normal; font-size: 1em; padding: 0px; font-family: inherit; text-align: left; letter-spacing: 0em; }
 div.section h3 span.tocnum { top: 0.2em; }
 
 div.section { margin: 2em 0em 0em; }
